add new section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
         </div>
     </section>
 
+    <section class="first">
+        <div class="container">
+            <img src="img/first_webinar/1.png" alt="first_img" class="first_img">
+            <h2 class="first_info">Первый вебинар состоится:</h2>
+            <h2 class="first_date">10 сентября в 20:00 по москве</h2>
+            <div class="first_sign">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer_link">
